# FastAPI

./: .env  .env.example  .gitignore  README.md  main.py  poetry.toml  pyproject.toml
app/: config.py  main.py
app/agent/: prompt.py
app/agent/knowledge/: __init__.py  builder.py  chroma.py  embeddings.py  ingest.py
app/agent/llm/: langchain_llm.py  prompt.py  zhipu.py
app/agent/rag/: __init__.py  qa_chain.py  retriever.py  store.py
app/controllers/: chat_controller.py  knowledge_controller.py  new_session_controller.py
app/services/: chat_service.py  knowledge_service.py  new_session_service.py
data/docs/: go_knowledge.md  project_intro.md
scripts/: build_knowledge.py  setup_env.sh
