[project]
name = "fastapi-test"
version = "0.1.0"
description = "测试搭建fastapi"
authors = [
    {name = "cxy", email = "492730753@qq.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "zai-sdk (>=0.2.2,<0.3.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.0,<0.4.0)",
    "langchain-text-splitters (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"